# projectDjango

./: db.sqlite3  pyproject.toml
equacao_seg_grau/: apps.py  forms.py  models.py  urls.py  views.py
equacao_seg_grau/migrations/: 0001_initial.py
equacao_seg_grau/templates/: base.html  index.html
equacao_seg_grau/templates/calculadora/: calculadora.html
project_django/: asgi.py  settings.py  wsgi.py
projecto_django/: settings.py  urls.py
