[tool.poetry]
name = "projeto-django"
version = "0.1.0"
description = "Meu primeiro projeto em django"
authors = ["Diogo Caribé de Sousa"]
readme = "README.md"
packages = [{include = "projeto_django"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
